<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/today"
            android:title="@string/nav_header_today" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/nav_header_weather" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/nav_header_schedule" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/nav_header_wallet" />
    </group>

    <item android:title="@string/nav_header_others">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting"
                android:title="@string/nav_header_setting"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/nav_header_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit"
                android:title="@string/nav_header_exit" />
        </menu>
    </item>

</menu>
